2008-10-04  Alp Toker  <alp@nuanti.com>

Reviewed by David Hyatt. Landed by Jan Alonzo.

        https://bugs.webkit.org/show_bug.cgi?id=20924
        [Gtk] Linux/Gtk: Recent tree revisions fail Acid2 and Acid3

        https://bugs.webkit.org/show_bug.cgi?id=19578
        [CURL] problem in parseDataUrl

        De-obfuscate parseDataUrl() and fix regressions introduced in r35954.
        This patch also fixes encoding support in escaped (non-Base64) data
        URLs. All manual data URL tests now pass in both GLib and non-GLib
        code paths.

        * platform/network/curl/ResourceHandleManager.cpp:
        (WebCore::parseDataUrl):

Canonical link: https://commits.webkit.org/29570@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@37314 268f45cc-cd09-0410-ab3c-d52691b4dbfc